--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,48 @@
 ---
-
+import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<BaseLayout>
+	<div class="max-w-[1200px] mx-auto">
+		<div class="space-y-5">
+			<section class="bg-light rounded-2xl p-16 space-y-8">
+				<img class="w-64" src="/logo-black.png" alt="">
+				<h2 class="font-bold text-6xl text-black ">做最高品质的创意工作者周边</h2>
+			</section>
+			<section>
+				<div class="flex gap-5">
+					<a href="https://4t51qgz71vaw9dfn98shpivkmnuyr2l.taobao.com/" target="_blank"class="bg-red-800 rounded-2xl p-5 transition-colors hover:bg-red-900">
+						<div>
+							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-gift"><rect x="3" y="8" width="18" height="4" rx="1"/><path d="M12 8v13"/><path d="M19 12v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-7"/><path d="M7.5 8a2.5 2.5 0 0 1 0-5A4.8 8 0 0 1 12 8a4.8 8 0 0 1 4.5-5 2.5 2.5 0 0 1 0 5"/></svg>
+						</div>
+						<div class="p-6">
+							<img class="w-48" src="/sticker-bundle.png" alt="">
+						</div>
+						<div class="space-y-2">
+							<h3 class="font-bold text-3xl">贴纸</h3>
+							<h4>10 丝 PVC, 耐磨不留痕</h4>
+						</div>
+					</a>
+
+					<a href="/blog/donation" class="flex-1 bg-green-800 rounded-2xl p-10 transition-colors hover:bg-green-900">
+						<div class="flex flex-col justify-between h-full">
+							<div class="space-y-5">
+<h3 class="text-5xl font-bold">开源项目捐赠计划</h3>
+						<div class="text-2xl">每卖出一张开源项目的贴纸，我们会为其捐赠 1 元人民币。</div>
+						
+							</div>
+
+						<div class="flex items-center gap-2 text-lg">
+							查看捐赠明细
+
+							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
+						</div>
+						</div>	
+					</a>
+
+				</div>
+			</section>
+		</div>
+	
+	</div>
+</BaseLayout>
