--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -6,7 +6,7 @@ const { frontmatter: {
 
 ---
 
-<BaseLayout>
+<BaseLayout title={title}>
  <div class="contain px-3">
   <div class="flex items-center gap-2 mt-24 mb-4">
       <a href="/" class="text-foreground flex items-center gap-1">    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-left"><path d="m12 19-7-7 7-7"/><path d="M19 12H5"/></svg>
