--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -33,7 +33,7 @@ const baseSEO = {
 		<title>{realTile}</title>
 	</head>
 	<body>
-    <nav class="p-3 max-w-[1200px] mx-auto my-8">
+    <nav class="p-3 contain my-8">
 			<div class="flex items-center justify-between">
 			<div>
 			<a href="/">
