--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 			</section>
 			<section>
 				<div class="flex flex-col lg:flex-row gap-5">
-					<a href="https://4t51qgz71vaw9dfn98shpivkmnuyr2l.taobao.com/" target="_blank"class="bg-red-800 rounded-2xl p-5 transition-colors hover:bg-red-900">
+					<a href="/shop" target="_blank"class="bg-red-800 rounded-2xl p-5 transition-colors hover:bg-red-900">
 						<div>
 							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-gift"><rect x="3" y="8" width="18" height="4" rx="1"/><path d="M12 8v13"/><path d="M19 12v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-7"/><path d="M7.5 8a2.5 2.5 0 0 1 0-5A4.8 8 0 0 1 12 8a4.8 8 0 0 1 4.5-5 2.5 2.5 0 0 1 0 5"/></svg>
 						</div>
